--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,20 @@
+body {
+  background-color: #e91100;
+}
+
+.row {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 #image-wrapper {
   width: 640px;
   height: 480px;
+  position: relative;
+  margin: 0 auto;
 }
 
-.label {
+.word {
   position: absolute;
   display: block;
   top: 213px;
