--- a/partials/main.html
+++ b/partials/main.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="row">
+    <h1 class="title">Send Coke To ...</h1>
+  </div>
+
+  <div class="row">
     <div id="image-wrapper">
       <img src="img/sendcoketo.png" alt="ส่งโค้กให้{{ word }}">
       <div class="word">{{ word }}</div>
@@ -16,5 +20,10 @@
     <div class="row">
       <button class="btn btn-primary col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3" ng-click="generate()">Get Image</button>
     </div>
+  </div>
+
+  <div class="container">
+    <p class="credits">By <a href="https://twitter.com/narze">@narze</a></p>
+    <p class="credits">Uses <a href="http://getbootstrap.com/">Bootstrap 3.0.0</a>, <a href="http://angularjs.org/">AngularJS</a>, <a href="https://github.com/niklasvh/html2canvas">html2canvas</a>, <a href="http://www.f0nt.com/release/thai-sans-lite/">Thai Sans Lite font</a></p>
   </div>
 </div>
