Use smaller image

--- a/partials/main.html
+++ b/partials/main.html
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div id="image-wrapper">
-      <img src="img/sendcoketo.png" alt="ส่งโค้กให้{{ word }}">
+      <img src="img/sendcoketo.jpg" alt="ส่งโค้กให้{{ word }}">
       <div id="word">{{ word }}</div>
     </div>
   </div>
